perf-baseline/baseline-run.txt
   Compiling kithara-integration-tests v0.1.0 (/Users/litvinenko-pv/code/kithara/tests)
error[E0432]: unresolved import `kithara_assets::PinsIndex`
  --> tests/tests/kithara_assets/pins_index_integration.rs:5:82
   |
 5 | use kithara_assets::{AssetStore, AssetStoreBuilder, DiskAssetStore, EvictConfig, PinsIndex};
   |                                                                                  ^^^^^^^^^ no `PinsIndex` in the root
   |
note: found an item that was configured out
  --> crates/kithara-assets/src/lib.rs:54:16
   |
53 | #[cfg(feature = "internal")]
   |       -------------------- the item is gated behind the `internal` feature
54 | pub use index::PinsIndex;
   |                ^^^^^^^^^

warning: unused import: `abr::*`
  --> tests/tests/kithara_hls/fixture/mod.rs:15:9
   |
15 | pub use abr::*;
   |         ^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `kithara-integration-tests` (test "integration") generated 1 warning
error: could not compile `kithara-integration-tests` (test "integration") due to 1 previous error; 1 warning emitted
